# rascal

./: .appveyor.yml  .classpath  .codecov.yml  .factorypath  .git-blame-ignore-revs  .gitattributes  .gitignore  .project  .tif  AUTHORS.md  C:\nppdf32Log\debuglog.txt  CITATION.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  FUNDING  Halide example.ipynb  Jenkinsfile  LICENSE  Makefile.am  README.md  RELEASE-NOTES.md  TestTest.rsc  about.html  ad2md.sh  add_header.py  build.properties  capsule_values_unpacker.xml  compileTmp.xml  configure.ac  example.trm  howto_generate_new_binaries.txt  java.hprof.txt  ossmeter-release.xml  plugin.xml  pom.xml  rascal-libpath.sh.src  rascal-recovery-stats.csv  rascal.pc.in  (+8 more)
.externalToolBuilders/: Capsule and Values unpacker.launch
demo/: Bubble.rsc  Calls.rsc  CarFDL.rsc  Cycles.rsc  DocGenFDL.rsc  Dominators.rsc  GraphDataType.rsc  Innerproduct.rsc  Lift.rsc  MEPT.rsc  Queens.rsc  ReachingDefs.rsc  Slicing.rsc  Squares.rsc  Tree-examples.rsc  UPTR.rsc  WordCount.rsc  WordReplacement.rsc
doc/: .~lock.Improvements.ods#  .~lock.ProgressImplementation.ods#  Improvements.ods  ProgressImplementation.ods
launch/: AllRascalTests.launch  BasicAndFunctionalityAndLibraryTests.launch  RascalFunctionalityAndLibraryTests.launch  RascalSyntaxTests.launch  RascalTutor.launch  TypecheckerTests.launch
lib/: Makefile.am
rascal-test/: wr.txt
resources/: Makefile  Makefile.am  Makefile.in  rascal-pico.trm.tbl  rascal.trm.tbl
src/: ATermIO.rsc  Ackermann.rsc  Ambiguity.rsc  Annotations.rsc  Assignable.rsc  Assimilator.rsc  Basic.rsc  Benchmark.rsc  Boolean.rsc  Box.rsc  BoxFormat.rsc  BubbleTest.rsc  BuiltIns1.rsc  C.rsc  Case.rsc  CheckController.rsc  ColoredTrees.rsc  CompareShortestPath.rsc  Concrete.rsc  Crawl.rsc  (+115 more)
(+10784 files in other folders)
